# Linux.do-Accelerator

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-ios.yml  publish-edge-pre-release.yml
ios/: .gitignore  README.md  project.yml
ios/App/: CertInstaller.swift  ConfigView.swift  ContentView.swift  Info.plist  LinuxdoAcceleratorApp.swift  MobileConfig.swift  TunnelManager.swift
ios/PacketTunnel/: Info.plist  PacketTunnel.entitlements  PacketTunnelProvider.swift
ios/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/Shared/: ConfigStore.swift  DnsPacketCodec.swift  DnsWireParser.swift  DohResolver+Query.swift  DohResolver.swift  LinuxdoConfig.swift  MiniToml.swift  RustCore.swift  TunPacketCodec.swift
src/: autostart.rs  certs.rs  cli.rs  ffi_ios.rs  gui.rs  helper_ipc.rs  lib.rs  paths.rs  platform.rs  service.rs
